--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "personal_site"
+  title: "Neel Smith"
   navbar:
     left:
       - href: index.qmd
