Add personal section

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,9 +19,10 @@ website:
       contents: 
         - digschol/index.qmd
 
-    - title: "Other projects"
+    - title: "Personal"
       contents:
-        - other/index.qmd  
+        - personal/index.qmd
+        - personal/white.qmd
 
 
 format:
