--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,17 +14,34 @@ website:
       - text: "Why Julia?"
         file: julia.qmd
       - about.qmd
+
   sidebar:
     - title: "Digital scholarship"
       contents: 
         - digschol/index.qmd
+     
+
+        - text: "---"
+
+
 
     - title: "Personal"
       contents:
         - personal/index.qmd
         - personal/white.qmd
         - personal/juliagen.qmd
-
+    - title: "Orthography"
+      contents:
+        - digitexts/orthography/index.qmd
+        - digitexts/orthography/greek.qmd
+        - digitexts/orthography/latin.qmd
+        - digitexts/orthography/hebrew.qmd
+        - digitexts/orthography/lycian.qmd                        
+    - title: "Morphological parsing"
+      contents:
+        - digitexts/parsing/index.qmd
+        - digitexts/parsing/kanones.qmd
+        - digitexts/parsing/tabulae.qmd        
 
 format:
   html:
