--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,8 @@ website:
       contents: 
         - digschol/index.qmd
         - text: "---"
+        - digschol/narrative/index.qmd
+        - text: "---"
         - cite/index.qmd        
         - digitexts/index.qmd
         - walkthrough/index.qmd
