--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,9 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - text: "Digital scholarship"
+      - text: "Projects"
+        file: projects/index.qmd         
+      - text: "Digital infrastructure"
         file: digschol/index.qmd     
       - text: "Why Julia?"
         file: julia/index.qmd
@@ -23,12 +25,14 @@ website:
         menu:
           - text: "About me"
             href: https://neelsmith.quarto.pub
-          - text: "Digital scholarship"
+          - text: "Projects"
+            href: https://neelsmith.quarto.pub/projects/            
+          - text: "Digital infrastructure"
             href: https://neelsmith.quarto.pub/digschol/
         aria-label: Home
 
   sidebar:
-    - title: "Digital scholarship"
+    - title: "Digital infrastructure"
       contents: 
         - digschol/index.qmd
         - text: "---"
