--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,8 +11,10 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - text: "News/comments"
+        file: posts.qmd        
       - text: "Projects"
-        file: projects/index.qmd         
+        file: projects/index.qmd    
       - text: "Digital infrastructure"
         file: digschol/index.qmd     
       - text: "Why Julia?"
