Correct syntax for generating RSS feeds

--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -5,7 +5,8 @@
 # re-render posts only when a change to the source file is made ----
 freeze: auto
 
-# enable banner style title blocks ----
+# enable banner style title blocks 
 title-block-banner: true
 
-feed: true
+
+
